# forge

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  awake.py  body.py  bot.py  cli.py  config.py  core.py  docker-compose.yml  docker-entrypoint.sh  garden-bot.service  golem.service  main.py  models.py  orchestrator.py  pyproject.toml  requirements.txt
admin/: checks.py  env_io.py  server.py
admin/static/: index.html
advisor/: __init__.py  advisor.py  mistral.py
brain/: __init__.py  anthropic.py  brain.py  mistral.py  ollama.py  openai.py
communication/: scheduler.py  telegram.py
data/: spirit.json
dialog/: __init__.py  dialog.py  telegram.py
forge/: migration.py  runner.py  server.py  store.py  supervisor.py
forge/static/: index.html
golem/: __init__.py  core.py  golem.py  log.py
golem/brain/: __init__.py  anthropic.py  brain.py  mistral.py  ollama.py  openai.py
golem/dialog/: __init__.py  telegram.py
golem/memory/: __init__.py  tinydb_store.py
golem/skills/: __init__.py  memory_skill.py  notion.py  open_meteo.py  skill.py
golem/spirit/: __init__.py  spirit.py
memory/: __init__.py  garden_memory.py  json_store.py  memory.py  notion.py  tinydb_store.py
skills/: __init__.py  memory_skill.py  open_meteo.py  skill.py
spirit/: __init__.py  spirit.py
tests/: test_admin_env_io.py  test_admin_server.py  test_bot.py  test_config.py  test_mistral.py  test_notion.py  test_open_meteo.py  test_scheduler.py  test_telegram.py
view/: env_io.py  server.py
voice/: __init__.py  telegram.py  voice.py
workshop/: server.py
(+2 files in other folders)
