[project]
name = "garden-bot"
version = "0.2.0"
description = "Modular personal assistant: Brain (LLM) + Memory (JSON) + Skills (MCP-shaped) + Spirit (instructions/schedules) + Voice (Telegram)."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "mistralai>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
]
