[project]
name = "golem"
version = "0.2.0"
description = "Modular personal assistant skeleton: Brain (LLM) + Memory (JSON) + Skills (MCP-shaped) + Spirit (instructions/schedules) + Dialog (Telegram). Personality is configuration."
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "mistralai>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "requests>=2.31.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "tinydb>=4.8.0",
]

[project.scripts]
golem = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain", "memory", "skills", "spirit", "dialog", "workshop"]
include = ["awake.py", "body.py", "cli.py", "config.py", "core.py"]
